--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "polymer": "Polymer/polymer#^1.6.0",
     "polymerfire": "firebase/polymerfire#^0.10.3",
     "paper-button": "PolymerElements/paper-button#^1.0.14",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "paper-input": "PolymerElements/paper-input#^1.1.23"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
