--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "paper-button": "PolymerElements/paper-button#^1.0.14",
     "moment": "^2.17.1",
     "paper-input": "PolymerElements/paper-input#^1.1.23",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0"
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0",
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
