--- a/public/bower.json
+++ b/public/bower.json
@@ -23,7 +23,11 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3"
+    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.1",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.0",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
