--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "paper-radio-button": "PolymerElements/paper-radio-button#^1.3.1",
-    "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.1"
+    "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.1",
+    "time-elements": "github/time-elements#^0.6.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
