--- a/public/bower.json
+++ b/public/bower.json
@@ -27,7 +27,10 @@
     "paper-fab": "PolymerElements/paper-fab#^1.2.1",
     "iron-icons": "PolymerElements/iron-icons#^1.2.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
+    "paper-radio-button": "PolymerElements/paper-radio-button#^1.3.1",
+    "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.1",
+    "time-elements": "github/time-elements#^0.6.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
