--- a/public/bower.json
+++ b/public/bower.json
@@ -11,7 +11,7 @@
     "iron-icon": "PolymerElements/iron-icon#^1.0.0",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
-    "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
+    "iron-media-query": "PolymerElements/iron-media-query#^1.0.8",
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
@@ -30,7 +30,9 @@
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "paper-radio-button": "PolymerElements/paper-radio-button#^1.3.1",
     "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.1",
-    "time-elements": "github/time-elements#^0.6.1"
+    "time-elements": "github/time-elements#^0.6.1",
+    "iron-image": "PolymerElements/iron-image#^1.2.5",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
